# opencyphal-zephyr

./: .gitmodules  README.md
app/: CMakeLists.txt
